terraform/environments/dev/security-group.tf
resource "aws_security_group" "cloudforge" {
  name        = "cloudforge-dev-sg"
  description = "Security group for CloudForge development EC2"
  vpc_id      = aws_vpc.cloudforge.id

  ingress {
    description = "CloudForge API"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "cloudforge-dev-sg"
  }
}
